# aoc2020

./: Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: general.yml  rustdoc.yml
aoc2020/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
aoc2020/day_1/: enum.Day1Error.html  fn.input.html  fn.run.html  fn.task_1.html  fn.task_2.html  index.html  sidebar-items.js
aoc2020/day_10/: fn.input.html  fn.run.html  fn.task_1.html  index.html  sidebar-items.js
aoc2020/day_2/: enum.Day2Error.html  fn.input.html  fn.run.html  fn.task_1.html  fn.task_2.html  index.html  sidebar-items.js  struct.PasswordAndPolicy.html
aoc2020/day_3/: constant.EMPTY.html  constant.TREE.html  enum.DayError.html  fn.check_slope.html  fn.input.html  fn.run.html  fn.task_1.html  fn.task_2.html  index.html  sidebar-items.js  struct.Slope.html  struct.TreeMaze.html
aoc2020/day_4/: constant.NEEDED_KEYS.html  enum.Height.html  fn.input.html  fn.parse_file.html  fn.run.html  fn.task_1.html  fn.task_2.html  fn.validate_color.html  fn.validate_eye.html  fn.validate_passport_number.html  index.html  sidebar-items.js  struct.Passport.html
aoc2020/day_5/: constant.BACK.html  constant.FRONT.html  constant.LEFT.html  constant.RIGHT.html  enum.DayError.html  fn.calculate_column.html  fn.calculate_column_rec.html  fn.calculate_row.html  fn.calculate_row_rec.html  fn.input.html  fn.run.html  fn.task_1.html  fn.task_2.html  (+3 more)
src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
(+68 files in other folders)
