[package]
name = "aoc2020"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = "3.0.0-beta.2"
chrono = "0.4"
regex = "1.4"
